@@ -89,5 +89,51 @@
 <table id="table_for_insertions"></table>
 <table id="table_for_row_insertions"><tr id="row_1"></tr></table>
 
+<!-- test input elements with scrollLeft/scrollTop -->
+<form method="post" action="blah">
+  <input id="scrollOffset_input" type="text" value="0123456789012345678901234567890123456789" />
+  <textarea id="scrollOffset_textarea">0123456789012345678901234567890123456789</textarea>
+</form>
+
+<!-- Positioning methods bench -->
+
+<table>
+  <thead>
+    <tr id="tr_offset_parent_test">
+      <th>
+        <div id="th_offset_parent_test">blah</div>
+      </th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>
+        <div id="td_offset_parent_test">blah</div>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+<map name="test_map">
+  <area href="" alt="" coords="0,0,1,1" />
+  <area id="map_offset_parent_test" href="" alt="" coords="0,0,2,2" />
+</map>
+
+<div id="body_relative" style="position: relative;"></div>
+<div id="body_absolute" style="position: absolute; top: 10px; left: 10px">
+  <div id="absolute_absolute" style="position: absolute; top: 10px; left:10px; width: 25px; height: 25px; overflow:scroll;">
+    <span style="display:block; width: 50px; height: 50px;">foo</span>
+  </div>
+  <div id="absolute_relative" style="position: relative; top: 10px; left:10px">
+    <div style="height:10px;font-size:2px">test<span id="inline">test</span></div>
+    <div id="absolute_relative_undefined" style="width: 50px; height: 50px;">XYZ</div>
+  </div>
+  <div id="absolute_fixed" style="position: fixed; top: 10px; left: 10px; width: 25px; height: 25px; overflow:scroll;">
+    <span id="absolute_fixed_absolute" style="position: absolute; top: 10px; left: 10px">foo</span>
+    <span id="absolute_fixed_undefined" style="display:block; width: 50px; height: 50px;">bar</span>
+  </div></div>
+<div id="notInlineAbsoluted"></div>
+<div id="inlineAbsoluted" style="position: absolute"></div>
+
 </body>
 </html>
